--- a/pages/my/homepage/homepage.wxss
+++ b/pages/my/homepage/homepage.wxss
@@ -1,9 +1,11 @@
 @import '../../../utils/iconfont.wxss'; 
+@import "../../../utils/icon.wxss";
 page{background-color: #FAFAFA;}
 .top_box{position: relative}
 .top_img{width: 750rpx;height: 264rpx;}
 .top_nr{background-color:#fff;box-shadow:0rpx 0rpx 20rpx #d8d5d5 ;border-radius: 18rpx;padding: 22rpx 28rpx 24rpx;display: flex;position: absolute;top: 28rpx;left: 26rpx;right: 26rpx}
 .user_img{width: 128rpx;height: 128rpx;margin-right: 18rpx;border-radius: 50%;}
+.user_img_two{width: 128rpx;height: 128rpx;margin-right: 18rpx;border-radius: 50%;font-size:144rpx;margin-top:-5px;margin-left:-5px;}
 .user_name{font-size: 32rpx;margin:5rpx 0 10rpx}
 .user_jj{color: rgba(80, 80, 80, 1);font-size: 24rpx;height: 36rpx}
 .user_text{color: rgba(80, 80, 80, 1);font-size: 24rpx;height: 72rpx;width: 480rpx;overflow-x: hidden;overflow-y: scroll;line-height: 36rpx}
